refactor: Remove reservation section and form styles, and update location and contact information.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
             </a>
             <nav class="nav-links">
                 <a href="#about">Our Story</a>
-                <a href="#menu">Menu</a>
+                <a href="menu.html">Menu</a>
                 <a href="#visitus">Visit Us</a>
-                <a href="#reserve" class="btn-primary">Reserve Table</a>
             </nav>
             <button class="mobile-menu-toggle" aria-label="Toggle Menu">
                 <span></span>
@@ -50,8 +49,8 @@
                 <h1>Taste the Spirit <br> of <span class="text-highlight">Mexico</span></h1>
                 <p>Authentic flavors, family traditions, and a fiesta in every bite.</p>
                 <div class="cta-group">
-                    <a href="#menu" class="btn-primary">View Menu</a>
-                    <a href="#reserve" class="btn-outline">Book a Table</a>
+                    <a href="menu.html" class="btn-primary">View Menu</a>
+                    <a href="#visitus" class="btn-outline">Visit Us</a>
                 </div>
             </div>
             <!-- Decorative Parallax Elements (Placeholders) -->
@@ -116,7 +115,7 @@
                     </div>
                 </div>
                 <div class="center-text mt-2">
-                    <a href="#menu-full" class="btn-text">See Full Menu &rarr;</a>
+                    <a href="menu.html" class="btn-text">See Full Menu &rarr;</a>
                 </div>
             </div>
         </section>
@@ -142,43 +141,18 @@
                         </div>
                         <div class="info-block mt-2">
                             <h4>Location</h4>
-                            <p>123 Fiesta Way<br>Downtown District, ST 12345</p>
+                            <p>740 FL-60<br>Lake Wales, FL 33853</p>
+                        </div>
+                        <div class="info-block mt-2">
+                            <h4>Contact</h4>
+                            <p><a href="tel:8632238010">(863) 223-8010</a></p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- Reservation Section -->
-        <section id="reserve" class="section-padding">
-            <div class="container">
-                <div class="row">
-                    <div class="col-half scroll-reveal">
-                        <h2 class="section-title">Book a Table</h2>
-                        <p class="section-text">Join us for an unforgettable dining experience. For parties larger than
-                            8, please call us directly.</p>
-                    </div>
-                    <div class="col-half scroll-reveal">
-                        <form class="reservation-form">
-                            <div class="form-group">
-                                <label for="name">Name</label>
-                                <input type="text" id="name" name="name" required placeholder="Your Name">
-                            </div>
-                            <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="email" id="email" name="email" required placeholder="Your Email">
-                            </div>
-                            <div class="form-group">
-                                <label for="date">Date</label>
-                                <input type="date" id="date" name="date" required>
-                            </div>
-                            <button type="submit" class="btn-primary" style="margin-top: 1rem; width: 100%;">Confirm
-                                Reservation</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
+
 
     </main>
 
@@ -193,13 +167,13 @@
                 <div class="links-col">
                     <h4>Navigate</h4>
                     <a href="#about">About</a>
-                    <a href="#menu">Menu</a>
-                    <a href="#contact">Contact</a>
+                    <a href="menu.html">Menu</a>
+                    <a href="#visitus">Visit Us</a>
                 </div>
                 <div class="contact-col">
                     <h4>Find Us</h4>
-                    <p>123 Fiesta Way<br>Cityname, ST 12345</p>
-                    <p>(555) 123-4567</p>
+                    <p>740 FL-60<br>Lake Wales, FL 33853</p>
+                    <p><a href="tel:8632238010" style="color: inherit;">(863) 223-8010</a></p>
                 </div>
             </div>
             <div class="copyright">
