--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
                     </div>
                     <div class="col-half">
                         <div class="image-wrapper scroll-reveal">
-                            <!-- Placeholder for About Image -->
-                            <div class="placeholder-box" style="height: 400px; background: #ddd;">About Image</div>
+                            <!-- About Image -->
+                            <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1?auto=format&fit=crop&q=80&w=800"
+                                alt="El Ranchito Dining Area"
+                                style="border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1);">
                         </div>
                     </div>
                 </div>
