--- a/menu.html
+++ b/menu.html
@@ -14,36 +14,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Playfair+Display:wght@700;900&display=swap"
         rel="stylesheet">
-    <style>
-        .page-header {
-            height: 50vh;
-            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.unsplash.com/photo-1555939594-58d7cb561ad1?auto=format&fit=crop&q=80&w=1920');
-            background-size: cover;
-            background-position: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            margin-top: 80px;
-            /* Offset fixed header */
-        }
-
-        .page-header h1 {
-            font-size: 3.5rem;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        }
-
-        .menu-category {
-            padding: 4rem 0;
-        }
-
-        .menu-category h2 {
-            text-align: center;
-            margin-bottom: 2rem;
-            color: var(--color-primary);
-            font-size: 2.5rem;
-        }
-    </style>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Playfair+Display:wght@700;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -71,6 +44,7 @@
     <!-- Page Hero -->
     <section class="page-header">
         <h1>Our Menu</h1>
+        <p>A culinary journey through Mexico</p>
     </section>
 
     <!-- Main Content -->
