Final Polish: Google Maps, Mobile Hero Fixes, Menu Images

--- a/index.html
+++ b/index.html
@@ -127,11 +127,12 @@
             <div class="container">
                 <div class="row reverse-mobile">
                     <div class="col-half scroll-reveal">
-                        <!-- Simple Map Placeholder -->
-                        <div class="map-placeholder"
-                            style="width: 100%; height: 350px; background: #555; display: flex; align-items: center; justify-content: center; color: #aaa;">
-                            Google Maps Integration
-                        </div>
+                        <!-- Google Maps Integration -->
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3527.143760920427!2d-81.58334862446976!3d27.86650497609072!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88dd1901306b835b%3A0xc35436660124de31!2s740%20FL-60%2C%20Lake%20Wales%2C%20FL%2033853!5e0!3m2!1sen!2sus!4v1705953000000!5m2!1sen!2sus"
+                            width="100%" height="350"
+                            style="border:0; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.3);"
+                            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <div class="col-half scroll-reveal">
                         <h2 class="section-title text-light">Visit Us</h2>
