--- a/menu.html
+++ b/menu.html
@@ -93,7 +93,7 @@
             <div class="menu-grid">
                 <div class="menu-card scroll-reveal">
                     <div class="card-image"
-                        style="background-image: url('https://images.unsplash.com/photo-1565299585323-38d6b0865b47?auto=format&fit=crop&q=80&w=800')">
+                        style="background-image: url('https://images.pexels.com/photos/2092507/pexels-photo-2092507.jpeg?auto=compress&cs=tinysrgb&w=800')">
                     </div>
                     <div class="card-content">
                         <h3>Tacos Al Pastor</h3>
@@ -140,7 +140,7 @@
                 </div>
                 <div class="menu-card scroll-reveal">
                     <div class="card-image"
-                        style="background-image: url('https://images.unsplash.com/photo-1534352956036-cd81e27dd615?auto=format&fit=crop&q=80&w=800')">
+                        style="background-image: url('https://images.pexels.com/photos/5737254/pexels-photo-5737254.jpeg?auto=compress&cs=tinysrgb&w=800')">
                     </div>
                     <div class="card-content">
                         <h3>Enchiladas Verdes</h3>
@@ -167,7 +167,7 @@
             <div class="menu-grid">
                 <div class="menu-card scroll-reveal">
                     <div class="card-image"
-                        style="background-image: url('https://images.unsplash.com/photo-1581081050-8e67e25e50fc?auto=format&fit=crop&q=80&w=800')">
+                        style="background-image: url('https://images.pexels.com/photos/2109099/pexels-photo-2109099.jpeg?auto=compress&cs=tinysrgb&w=800')">
                     </div>
                     <div class="card-content">
                         <h3>Classic Margarita</h3>
