Fix: Use Lorem Picsum for guaranteed working images

--- a/menu.html
+++ b/menu.html
@@ -92,8 +92,7 @@
             <h2>Tacos & Burritos</h2>
             <div class="menu-grid">
                 <div class="menu-card scroll-reveal">
-                    <div class="card-image"
-                        style="background-image: url('https://images.pexels.com/photos/2092507/pexels-photo-2092507.jpeg?auto=compress&cs=tinysrgb&w=800')">
+                    <div class="card-image" style="background-image: url('https://picsum.photos/seed/tacos/800/600')">
                     </div>
                     <div class="card-content">
                         <h3>Tacos Al Pastor</h3>
@@ -140,7 +139,7 @@
                 </div>
                 <div class="menu-card scroll-reveal">
                     <div class="card-image"
-                        style="background-image: url('https://images.pexels.com/photos/5737254/pexels-photo-5737254.jpeg?auto=compress&cs=tinysrgb&w=800')">
+                        style="background-image: url('https://picsum.photos/seed/enchiladas/800/600')">
                     </div>
                     <div class="card-content">
                         <h3>Enchiladas Verdes</h3>
