Fix: Replace broken images with generated local assets

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
                 <h2 class="section-title center-text scroll-reveal">Favorites</h2>
                 <div class="menu-grid">
                     <div class="menu-card scroll-reveal">
-                        <div class="card-image"
-                            style="background-image: url('https://images.unsplash.com/photo-1568106690101-fd68aaa5022a?auto=format&fit=crop&q=80&w=800')">
+                        <div class="card-image" style="background-image: url('assets/images/tacos_al_pastor.png')">
                         </div>
                         <div class="card-content">
                             <h3>Tacos Al Pastor</h3>
@@ -105,8 +104,7 @@
                         </div>
                     </div>
                     <div class="menu-card scroll-reveal">
-                        <div class="card-image"
-                            style="background-image: url('https://images.unsplash.com/photo-1599321955726-e04842d99462?auto=format&fit=crop&q=80&w=800')">
+                        <div class="card-image" style="background-image: url('assets/images/enchiladas_verdes.png')">
                         </div>
                         <div class="card-content">
                             <h3>Enchiladas Verdes</h3>
