--- a/menu.html
+++ b/menu.html
@@ -138,8 +138,7 @@
                     </div>
                 </div>
                 <div class="menu-card scroll-reveal">
-                    <div class="card-image"
-                        style="background-image: url('https://picsum.photos/seed/enchiladas/800/600')">
+                    <div class="card-image" style="background-image: url('assets/images/enchiladas_verdes.png')">
                     </div>
                     <div class="card-content">
                         <h3>Enchiladas Verdes</h3>
@@ -165,8 +164,7 @@
             <h2>Drinks</h2>
             <div class="menu-grid">
                 <div class="menu-card scroll-reveal">
-                    <div class="card-image"
-                        style="background-image: url('https://images.pexels.com/photos/2109099/pexels-photo-2109099.jpeg?auto=compress&cs=tinysrgb&w=800')">
+                    <div class="card-image" style="background-image: url('assets/images/classic_margarita.png')">
                     </div>
                     <div class="card-content">
                         <h3>Classic Margarita</h3>
@@ -175,8 +173,7 @@
                     </div>
                 </div>
                 <div class="menu-card scroll-reveal">
-                    <div class="card-image"
-                        style="background-image: url('https://images.unsplash.com/photo-1541658016709-82535e94bc69?auto=format&fit=crop&q=80&w=800')">
+                    <div class="card-image" style="background-image: url('assets/images/horchata.png')">
                     </div>
                     <div class="card-content">
                         <h3>Horchata</h3>
